hw4/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapp-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: userapp
  template:
    metadata:
      labels:
        app: userapp
    spec:
      containers:
        - name: user
          image: docker.io/andytakker/simple_server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: api
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
