hw4/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapp-service
spec:
  selector:
    app: userapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: api
